objects/Opportunity_Billing_Plan__c.object
<CustomObject>
    <description>Opportunity Billing Plan based on time to full contract and billing method.</description>
    <fields>
        <fullName>Billing_Date__c</fullName>
        <label>Billing Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Billing_Rate__c</fullName>
        <label>Billing Rate</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Opportunity Billing Plans</relationshipLabel>
        <relationshipName>Opportunity_Billing_Plans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Opportunity Billing Plan</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Opportunity Billing Plan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Opportunity Billing Plans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>